--- a/_posts/tarot/2022-01-01-el-loco.md
+++ b/_posts/tarot/2022-01-01-el-loco.md
@@ -7,7 +7,7 @@ categories:
 tags:
   -
 toc: true
-toc_label: "Sobre el Loco"
+toc_label: "Sobre El Loco"
 
 excerpt: "This post should display a **header with a solid background color**, if the theme supports it."
 
@@ -20,35 +20,30 @@ header:
      url: "https://github.com"
 ---
 
-## Significado de la carta el Loco
+## Significado de la carta El Loco
 
 <img src="https://algzb.github.io/tarot/img/deck/m00.jpg" width="250">{: .align-left}
 
 
+## Significado
 
-## En una frase
+El Loco es un personaje que muchos dirían es absurdo aunque muy versátil pues se puede adaptar fácilmente a las circunstancias a su alrededor.
 
-## Descripción
+No espera para tomar decisiones, reacciona rápidamente, a veces sin pensar. Esto puede ser bueno, porque es la figura que toma acción cuando nadie más quiere. No todo tiene que ser perfecto, es mejor comenzar ahora que no hacer nada y mejorar las cosas sobre la marcha. Por ejemplo, si quieres comenzar un nuevo emprendimiento, el Loco te sugiere comenzar ahora con lo que tengas. Más adelante habrá oportunidad para perfeccionar los asuntos.
 
-## Amor
+Es una carta que invita a la acción el movimiento. Si tienes un problema, no te quedes sin hacer nada. Debes actuar.
+El loco representa a la juventud, el cometer errores para aprender. No es necesario tener las respuestas pero hay que estar dispuesto a aprender para tener un futuro mejor.
 
-## Dinero
 
-## Pasado
-
-## Presente
-
-## Futuro
+inventiva, experimento, asume riesgos, revolucionario, innovador, extiende la mano, alegre,
+drástico, factor de suerte, juguetón, euforia, libertad del individuo, inesperado, ilusión, desacuerdo con el universo, fiestas, ideas nuevas, extrovertido.
 
 ## Al revés
 
+Cuando El Loco aparece al revés nos habla de una situación caótica, la falta de irresponsabilidad y la falta de voluntad para resolver los asuntos.
+
+Representa la falta de seriedad para solucionar problemas, la impulsividad y la falta de control. La desorganición es presente. Representa falta de compromiso.
+
 ## Otras cartas de Tarot
 
-Encuentra el significado de otras cartas del Tarot.
-
-### [Arcanos Mayores](/categories/#arcanos-mayores)
-### [Arcanos Menores](/categories/#arcanos-menores)
-#### [Espadas](/categories/#espadas)
-#### [Copas ](/categories/#copas)
-#### [Oros](/categories/#oros)
-#### [Bastos](/categories/#bastos)
+[Encuentra el significado de otras cartas del Tarot.](/significado-cartas-del-tarot)
