--- a/_posts/tarot/2022-01-01-el-loco.md
+++ b/_posts/tarot/2022-01-01-el-loco.md
@@ -6,10 +6,8 @@ categories:
   - "Arcanos-Mayores"
 tags:
   -
-toc: true
-toc_label: "Sobre El Loco"
 
-excerpt: "This post should display a **header with a solid background color**, if the theme supports it."
+excerpt: "El espíritu joven que no tiene planes y anda sin rumbo por la vida aunque se adapta facilmente. "
 
 
 header:
@@ -25,24 +23,47 @@ header:
 <img src="https://algzb.github.io/tarot/img/deck/m00.jpg" width="250">{: .align-left}
 
 
-## Significado
+## Sobre la carta El Loco
+
+## Adaptarse a los cambios
 
 El Loco es un personaje que muchos dirían es absurdo aunque muy versátil pues se puede adaptar fácilmente a las circunstancias a su alrededor.
 
-No espera para tomar decisiones, reacciona rápidamente, a veces sin pensar. Esto puede ser bueno, porque es la figura que toma acción cuando nadie más quiere. No todo tiene que ser perfecto, es mejor comenzar ahora que no hacer nada y mejorar las cosas sobre la marcha. Por ejemplo, si quieres comenzar un nuevo emprendimiento, el Loco te sugiere comenzar ahora con lo que tengas. Más adelante habrá oportunidad para perfeccionar los asuntos.
+## Rápido para tomar decisiones
+
+No espera para tomar decisiones, reacciona rápidamente, a veces sin pensar. Esto puede ser bueno, porque es la figura que toma acción cuando nadie más quiere. No todo tiene que ser perfecto, es mejor comenzar ahora que no hacer nada y mejorar las cosas sobre la marcha.
+
+Por ejemplo, si quieres comenzar un nuevo emprendimiento, el Loco te sugiere comenzar ahora con lo que tengas. Más adelante habrá oportunidad para perfeccionar los asuntos.
+
+## Actuar sobre los asuntos
 
 Es una carta que invita a la acción el movimiento. Si tienes un problema, no te quedes sin hacer nada. Debes actuar.
 El loco representa a la juventud, el cometer errores para aprender. No es necesario tener las respuestas pero hay que estar dispuesto a aprender para tener un futuro mejor.
 
+## Revolucionario
 
-inventiva, experimento, asume riesgos, revolucionario, innovador, extiende la mano, alegre,
-drástico, factor de suerte, juguetón, euforia, libertad del individuo, inesperado, ilusión, desacuerdo con el universo, fiestas, ideas nuevas, extrovertido.
+El Loco disfruta experimentar. Quiere ver resultados. Para esto asume riesgos.
+
+Podríamos decir que es un revolucionario. Quiere cambiar lo que no funciona aunque sin un plan concreto.
+
+## Búsqueda de la felicidad
+
+El Loco es una carta que invita una reflexión sobre lo que nos hace feliz en la vida y volver a retomar aquellas cosas que visualizamos en la juventud.
+
+Esta carta nos invita a ser amigables, dar la mano a los amigos y familiares en necesidad siempre manteniendo una buena actitud hacia la vida.
+
+
+## Trabajo y finanzas
+
+El Loco te invita a tomar control de tus finanzas, evitar los gastos y hacer un plan.
+
+Esta carta representa alguien que no esta de acuerdo con las reglas y el orden establecido. Quiere cambiar la forma en que las cosas funcionan. Esto puede ser positivo pero también puede tener aspectos negativos si hablamos del trabajo o el dinero. 
 
 ## Al revés
 
 Cuando El Loco aparece al revés nos habla de una situación caótica, la falta de irresponsabilidad y la falta de voluntad para resolver los asuntos.
 
-Representa la falta de seriedad para solucionar problemas, la impulsividad y la falta de control. La desorganición es presente. Representa falta de compromiso.
+Representa la falta de seriedad para solucionar problemas, la impulsividad y la falta de control. La desorganización es presente. Representa falta de compromiso.
 
 ## Otras cartas de Tarot
 
