--- a/_posts/tarot/2022-01-01-el-loco.md
+++ b/_posts/tarot/2022-01-01-el-loco.md
@@ -12,10 +12,10 @@ excerpt: "El espíritu joven que no tiene planes y anda sin rumbo por la vida au
 
 header:
   overlay_image: https://images.unsplash.com/photo-1470653503930-01819ee7ec83?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-  overlay_filter: rgba(19, 0, 103, 0.8)
-  actions:
+  overlay_filter: rgba(149, 125, 173, 0.8)
+    actions:
    - label: "Ver todos las cartas"
-     url: "https://github.com"
+     url: "/significado-cartas-del-tarot"
 ---
 
 ## Significado de la carta El Loco
@@ -57,7 +57,7 @@ Esta carta nos invita a ser amigables, dar la mano a los amigos y familiares en 
 
 El Loco te invita a tomar control de tus finanzas, evitar los gastos y hacer un plan.
 
-Esta carta representa alguien que no esta de acuerdo con las reglas y el orden establecido. Quiere cambiar la forma en que las cosas funcionan. Esto puede ser positivo pero también puede tener aspectos negativos si hablamos del trabajo o el dinero. 
+Esta carta representa alguien que no esta de acuerdo con las reglas y el orden establecido. Quiere cambiar la forma en que las cosas funcionan. Esto puede ser positivo pero también puede tener aspectos negativos si hablamos del trabajo o el dinero.
 
 ## Al revés
 
